# openBW

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.server  agent_integration.md  agent_readme.md  data_loading.h  data_writing.h  sync.h  sync_server_asio_ws.h  sync_server_emscripten_ws.h
agent_reference/: orders.json  unit_types.json
demo/: README.md  run_demo.py
docs/: agent_command_status_codes.md  docker.md  soak_2026-07-11_results.tsv  soak_testing.md  syncbreaker.md  syncbreaker_findings_2026-07-13.md  wasm_observer_poc.md
docs/repro_r7_2026-07-12/: handoff_syncbreaker5.md  summary.md
docs/repro_r7_2026-07-12/runs/repro_r7_bc/: server_first5k.tsv
docs/repro_r7_2026-07-12/runs/repro_r7_bcd/: server_first5k.tsv
docs/repro_r7_2026-07-12/runs/repro_r7_owners/: server_first5k.tsv
docs/repro_r7_2026-07-12/runs/repro_r7_owners/critical/: obs_alice_cf14000-14300.tsv  obs_dave_cf18200-18300.tsv  server_cf14000-14300.tsv  server_cf18200-18300.tsv
docs/soak_qt_20_round4_fail/: analysis.json
docs/syncbreaker5_debug_2026-07-13/: findings.md  sdl.sync  server.sync
python_agent/: README.md  __init__.py  client.py  enums.py  helpers.py  local_map.py  map_parser.py  smoke_result.py  smoke_test.py  status.py
python_agent/agents/: ai_debug_agent.py  ai_v1_agent.py  ai_v2_agent.py  ai_v3_agent.py  ai_v4_agent.py  attacker.py  builder.py  miner.py  p_agent_debug_v1.py  p_agent_debug_v2.py  p_agent_v1.py  p_agent_v2.py  p_agent_v3.py  p_agent_v4.py  random_walk.py  replay_agent.py  t_agent_debug_v1.py  t_agent_debug_v2.py  t_agent_v4.py  t_agent_v5.py  t_agent_v6.py  t_agent_v6_1.py  t_agent_v6_2.py  t_agent_v6_3.py  t_agent_v6_4.py  t_agent_v6_5.py  t_agent_v6_6.py  t_agent_v6_7.py  trainer.py  z_agent_v4.py  z_agent_v5.py
scripts/: analyze_first_divergence.py  analyze_lcg_divergence.py  analyze_lcg_tick.py  analyze_state_divergence.py  build_slim_mpq.sh  repro_round7.sh  repro_soak_round.sh  repro_syncbreaker.sh  soak_qt_20.py  soak_repro_yesterday.sh  soak_sync_debug.sh  soak_sync_debug_v2.sh  soak_sync_debug_v2_pvp.sh  soak_syncbreaker.sh  soak_syncbreaker_multi.sh  tick_at_frame.py
server/: CMakeLists.txt  agent_protocol.h  auth.h  auth_test.cpp  command_queue.h  keygen.cpp  main.cpp  observation.h  observe_request.h  queries.h  query_request.h  sha256.h  ws_server.h
simsc/: .dockerignore  .gitignore  Dockerfile  requirements.txt  start.sh
simsc/alembic/: env.py
simsc/alembic/versions/: 0001_users_and_api_keys.py  0002_games.py  0003_invitations.py  0004_cognito_sub_nullable.py  0005_games_game_speed.py
simsc/app/: main.py
simsc/app/auth/: cognito.py  deps.py  reveal_cache.py
simsc/app/core/: config.py  security.py
simsc/app/db/: models.py  session.py
simsc/app/routes/: api.py  games.py  meta.py  ui.py
simsc/app/services/: games.py  k8s_client.py  users.py
simsc/app/static/: maps.json  welcome.html
simsc/app/static/locales/: en.json  zh-CN.json
simsc/app/static/simscadmin/: index.html
simsc/app/static/simscapp/: app.js  i18n.js  index.html  observer.html  observer_slim.html  styles.css
simsc/deploy/: 00-secret.yaml.tmpl  01-pvc.yaml.tmpl  02-deployment.yaml.tmpl  03-ingress-public.yaml.tmpl  04-ingress-cognito.yaml.tmpl  05-rbac.yaml.tmpl  render.sh
simsc_app/: CMakeLists.txt  README.md  main.cpp  qt_native_window.cpp  resources.qrc  sync_server_qt_ws.h
tools/: CMakeLists.txt  extract_enums.py  slim_mpq.cpp  static_map_parser.cpp
ui/: CMakeLists.txt  font_bitmap.h  native_window.h  observer.cpp  sdl2.cpp  ui.h
wasm/: .gitignore  build_hello.sh  build_observer.sh  build_observer_wasm.sh  build_observer_wasm_slim.sh  hello_sdl.cpp  observer_shell.html  observer_shell_slim.html  observer_wasm.cpp
